--- a/index.html
+++ b/index.html
@@ -226,10 +226,114 @@
                 <td><input type="checkbox" id="Valenskuy-28"></td>
                 <td><input type="checkbox" id="Valenskuy-29"></td>
             </tr>
+
+            <!-- Baris data absen Firskuy -->
+            <tr id="Firskuy">
+                <td>Firskuy</td>
+                <td><input type="checkbox" id="Firskuy-0"></td>
+                <td><input type="checkbox" id="Firskuy-1"></td>
+                <td><input type="checkbox" id="Firskuy-2"></td>
+                <td><input type="checkbox" id="Firskuy-3"></td>
+                <td><input type="checkbox" id="Firskuy-4"></td>
+                <td><input type="checkbox" id="Firskuy-5"></td>
+                <td><input type="checkbox" id="Firskuy-6"></td>
+                <td><input type="checkbox" id="Firskuy-7"></td>
+                <td><input type="checkbox" id="Firskuy-8"></td>
+                <td><input type="checkbox" id="Firskuy-9"></td>
+                <td><input type="checkbox" id="Firskuy-10"></td>
+                <td><input type="checkbox" id="Firskuy-11"></td>
+                <td><input type="checkbox" id="Firskuy-12"></td>
+                <td><input type="checkbox" id="Firskuy-13"></td>
+                <td><input type="checkbox" id="Firskuy-14"></td>
+                <td><input type="checkbox" id="Firskuy-15"></td>
+                <td><input type="checkbox" id="Firskuy-16"></td>
+                <td><input type="checkbox" id="Firskuy-17"></td>
+                <td><input type="checkbox" id="Firskuy-18"></td>
+                <td><input type="checkbox" id="Firskuy-19"></td>
+                <td><input type="checkbox" id="Firskuy-20"></td>
+                <td><input type="checkbox" id="Firskuy-21"></td>
+                <td><input type="checkbox" id="Firskuy-22"></td>
+                <td><input type="checkbox" id="Firskuy-23"></td>
+                <td><input type="checkbox" id="Firskuy-24"></td>
+                <td><input type="checkbox" id="Firskuy-25"></td>
+                <td><input type="checkbox" id="Firskuy-26"></td>
+                <td><input type="checkbox" id="Firskuy-27"></td>
+                <td><input type="checkbox" id="Firskuy-28"></td>
+                <td><input type="checkbox" id="Firskuy-29"></td>
+            </tr>
+
+            <!-- Baris data absen SadidGTG -->
+            <tr id="SadidGTG">
+                <td>SadidGTG</td>
+                <td><input type="checkbox" id="SadidGTG-0"></td>
+                <td><input type="checkbox" id="SadidGTG-1"></td>
+                <td><input type="checkbox" id="SadidGTG-2"></td>
+                <td><input type="checkbox" id="SadidGTG-3"></td>
+                <td><input type="checkbox" id="SadidGTG-4"></td>
+                <td><input type="checkbox" id="SadidGTG-5"></td>
+                <td><input type="checkbox" id="SadidGTG-6"></td>
+                <td><input type="checkbox" id="SadidGTG-7"></td>
+                <td><input type="checkbox" id="SadidGTG-8"></td>
+                <td><input type="checkbox" id="SadidGTG-9"></td>
+                <td><input type="checkbox" id="SadidGTG-10"></td>
+                <td><input type="checkbox" id="SadidGTG-11"></td>
+                <td><input type="checkbox" id="SadidGTG-12"></td>
+                <td><input type="checkbox" id="SadidGTG-13"></td>
+                <td><input type="checkbox" id="SadidGTG-14"></td>
+                <td><input type="checkbox" id="SadidGTG-15"></td>
+                <td><input type="checkbox" id="SadidGTG-16"></td>
+                <td><input type="checkbox" id="SadidGTG-17"></td>
+                <td><input type="checkbox" id="SadidGTG-18"></td>
+                <td><input type="checkbox" id="SadidGTG-19"></td>
+                <td><input type="checkbox" id="SadidGTG-20"></td>
+                <td><input type="checkbox" id="SadidGTG-21"></td>
+                <td><input type="checkbox" id="SadidGTG-22"></td>
+                <td><input type="checkbox" id="SadidGTG-23"></td>
+                <td><input type="checkbox" id="SadidGTG-24"></td>
+                <td><input type="checkbox" id="SadidGTG-25"></td>
+                <td><input type="checkbox" id="SadidGTG-26"></td>
+                <td><input type="checkbox" id="SadidGTG-27"></td>
+                <td><input type="checkbox" id="SadidGTG-28"></td>
+                <td><input type="checkbox" id="SadidGTG-29"></td>
+            </tr>
+
+            <!-- Baris data absen Rizqi -->
+            <tr id="Rizqi">
+                <td>Rizqi</td>
+                <td><input type="checkbox" id="Rizqi-0"></td>
+                <td><input type="checkbox" id="Rizqi-1"></td>
+                <td><input type="checkbox" id="Rizqi-2"></td>
+                <td><input type="checkbox" id="Rizqi-3"></td>
+                <td><input type="checkbox" id="Rizqi-4"></td>
+                <td><input type="checkbox" id="Rizqi-5"></td>
+                <td><input type="checkbox" id="Rizqi-6"></td>
+                <td><input type="checkbox" id="Rizqi-7"></td>
+                <td><input type="checkbox" id="Rizqi-8"></td>
+                <td><input type="checkbox" id="Rizqi-9"></td>
+                <td><input type="checkbox" id="Rizqi-10"></td>
+                <td><input type="checkbox" id="Rizqi-11"></td>
+                <td><input type="checkbox" id="Rizqi-12"></td>
+                <td><input type="checkbox" id="Rizqi-13"></td>
+                <td><input type="checkbox" id="Rizqi-14"></td>
+                <td><input type="checkbox" id="Rizqi-15"></td>
+                <td><input type="checkbox" id="Rizqi-16"></td>
+                <td><input type="checkbox" id="Rizqi-17"></td>
+                <td><input type="checkbox" id="Rizqi-18"></td>
+                <td><input type="checkbox" id="Rizqi-19"></td>
+                <td><input type="checkbox" id="Rizqi-20"></td>
+                <td><input type="checkbox" id="Rizqi-21"></td>
+                <td><input type="checkbox" id="Rizqi-22"></td>
+                <td><input type="checkbox" id="Rizqi-23"></td>
+                <td><input type="checkbox" id="Rizqi-24"></td>
+                <td><input type="checkbox" id="Rizqi-25"></td>
+                <td><input type="checkbox" id="Rizqi-26"></td>
+                <td><input type="checkbox" id="Rizqi-27"></td>
+                <td><input type="checkbox" id="Rizqi-28"></td>
+                <td><input type="checkbox" id="Rizqi-29"></td>
+            </tr>
         </tbody>
     </table>
 
-    <!-- Gambar Kucing Animasi -->
     <div class="kucing">
         <img src="https://www.example.com/lucu-kucing.gif" alt="Kucing Lucu">
     </div>
